# VibeCut

./: .gitignore  .impeccable.md  AGENT_GUIDE.md  CLAUDE.md  README.md  README_en.md  package.json  pnpm-lock.yaml
apps/backend/: .env.example  package.json  pyproject.toml
apps/backend/app/: config.py  main.py
apps/backend/app/agent/: loop.py  prompt.py  state.py
apps/backend/app/api/: chat.py  export.py  media.py  projects.py  subtitle_styles.py  tool_gateway.py  ws.py
apps/backend/app/models/: messages.py  timeline.py
apps/backend/app/services/: analysis_file.py  ass_export.py  creative_plan.py  export_jobs.py  fcpxml_export.py  ffmpeg_export.py  font_registry.py  gemini_client.py  gpu_check.py  openai_vision.py  otio_export.py  promo_director.py  remotion_export.py  srt_export.py  subtitle_styles.py  timeline_manager.py  timeline_validator.py  video_compress.py  visual_qa.py  whisper_client.py  ws_manager.py
apps/backend/app/services/llm/: __init__.py  base.py  gemini_provider.py  openai_provider.py
apps/backend/app/services/tts/: __init__.py  base.py  edge_provider.py
apps/backend/app/tools/: asr.py  audio_analysis.py  bootstrap.py  creative_packs.py  creative_plan.py  export.py  filesystem.py  history.py  promo_director.py  registry.py  ripple_ops.py  shell.py  smart_compose.py  subtitle_styles.py  subtitles.py  time_mapping.py  timeline_ops.py  tts.py  user_interaction.py  vision.py  visual_qa.py
apps/backend/tests/: test_audio_analysis.py  test_core.py  test_history.py  test_ripple_ops.py
docs/: DESIGN.md  SPEC.md  colorconctrl.md  deside.md  (+7 more)
(+111 files in other folders)
